# worktypes-api

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  deploy-docker
apps/api/: .env  Cargo.toml
apps/api/src/: lib.rs  main.rs
apps/api/tests/: api_tests.rs
core/common/: Cargo.toml
core/common/src/: config.rs  error.rs  server.rs
core/common/src/modules/: mod.rs
core/common/src/repositories/: mod.rs  postgres.rs  postgres_orm.rs
docker/: docker-compose.yml
docker/supabase/: .env.example  docker-compose.yml
docker/supabase/docker/: .env.copy
docs/: api-endpoints.md  examples.md
migrations/: 0001_create_worktypes.sql  0002_create_companies.sql  20231201000000_create_table.sql
modules/companies/: Cargo.toml
modules/companies-orm/: Cargo.toml
modules/companies-orm/src/: lib.rs  models.rs
modules/companies-orm/src/repositories/: memory.rs  postgres.rs  repository.rs
modules/companies/src/: handlers.rs  lib.rs  models.rs  routes.rs
modules/companies/src/repositories/: mod.rs  postgres.rs
modules/offices/: Cargo.toml
modules/offices/src/: models.rs
modules/worktypes/: Cargo.toml
modules/worktypes/src/: handlers.rs  lib.rs  models.rs  requests.rs  routes.rs
modules/worktypes/src/repositories/: mod.rs  postgres.rs  repository.rs
src/: config.rs  error.rs  lib.rs  main.rs  server.rs
src/modules/: mod.rs
src/modules/companies/: handlers.rs  mod.rs
src/modules/companies/repositories/: memory.rs  postgres.rs  repository.rs
src/modules/worktypes/: handlers.rs  mod.rs  models.rs  repository.rs  requests.rs
