[package]
name = "worktypes-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
async-trait = "0.1.88"
thiserror = "2.0.12"
