[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
companies = { path = "../../modules/companies" }
worktypes = { path = "../../modules/worktypes" }
common = { path = "../../core/common" }
axum = "0.8.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
