[package]
name = "companies-orm"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../core/common" }
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.4"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
diesel = { version = "2.2.10", features = ["postgres", "chrono", "uuid"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
async-trait = "0.1.88"
thiserror = "2.0.12"
dotenvy = "0.15.7"
